--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "turbin3-prereq-ts"]
 	path = turbin3-prereq-ts
 	url = https://github.com/d1cetheroller/turbin3-prereq-ts.git
+[submodule "turbin3-prereq-rs"]
+	path = turbin3-prereq-rs
+	url = https://github.com/d1cetheroller/turbin3-prereq-rs.git
