--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "turbin3-prereq-rs"]
 	path = turbin3-prereq-rs
 	url = https://github.com/d1cetheroller/turbin3-prereq-rs.git
+[submodule "turbin3-solana-starter"]
+	path = turbin3-solana-starter
+	url = https://github.com/d1cetheroller/turbin3-solana-starter.git
